point directly to the repo

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "hoist-non-react-statics": "^1.2.0",
     "object-assign": "^4.0.1",
     "react": "^15.3.0",
-    "vatomic-soundcloud-audio": "1.0.1"
+    "soundcloud-audio": "git://github.com/ricardogarcia/soundcloud-audio.js"
   },
   "devDependencies": {
     "babel-cli": "^6.11.4",
