--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vatomic-react-soundplayer",
-  "version": "1.0.1",
+  "version": "1.0.6",
   "description": "Create custom SoundCloud players with React",
   "main": "index.js",
   "directories": {
@@ -36,7 +36,8 @@
     "hoist-non-react-statics": "^1.2.0",
     "object-assign": "^4.0.1",
     "react": "^15.3.0",
-    "soundcloud-audio": "git://github.com/ricardogarcia/soundcloud-audio.js"
+    "soundcloud": "^3.1.2",
+    "vatomic-soundcloud-audio": "git://github.com/ricardogarcia/soundcloud-audio.js"
   },
   "devDependencies": {
     "babel-cli": "^6.11.4",
